Adds link to the repo motivating this notebook

--- a/notebooks/tabgan.ipynb
+++ b/notebooks/tabgan.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Warning:** you will need to do a `pip install tabgan` to help get this notebook to work"
+    "**Warning:** you will need to do a `pip install tabgan` to help get this notebook to work.\n",
+    "\n",
+    "See this [GitHub repo](https://github.com/Diyago/GAN-for-tabular-data)."
    ]
   },
   {
