Writes fake data locally after generation

--- a/notebooks/tabgan.ipynb
+++ b/notebooks/tabgan.ipynb
@@ -63,7 +63,9 @@
     "TRAIN_DATA_PATH = \"data/raw/train.csv\"\n",
     "TEST_DATA_PATH = \"data/raw/test.csv\"\n",
     "NUM_COLUMNS = [\"Fare\", \"Age\"]\n",
-    "LABEL = \"Survived\""
+    "LABEL = \"Survived\"\n",
+    "\n",
+    "COLUMNS = [\"Pclass\", \"Sex\", \"Age\", \"SibSp\", \"Parch\", \"Fare\", \"Embarked\"]"
    ]
   },
   {
@@ -116,18 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "train = data[NUM_COLUMNS]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sns.pairplot(data[NUM_COLUMNS])\n",
+    "sns.pairplot(train[NUM_COLUMNS])\n",
     "plt.show()"
    ]
   },
@@ -139,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "sns.histplot(data[\"Age\"], label=\"Real Data\")\n",
+    "sns.histplot(train[\"Age\"], label=\"Real Data\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -177,12 +168,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "COLUMNS = train.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Impute missing values\n",
     "imputer = SimpleImputer(strategy=\"median\")\n",
-    "data = imputer.fit_transform(data)"
+    "train = pd.DataFrame(imputer.fit_transform(train), columns=COLUMNS)\n",
+    "test = pd.DataFrame(imputer.fit_transform(test), columns=COLUMNS)"
    ]
   },
   {
@@ -193,18 +196,8 @@
    },
    "outputs": [],
    "source": [
-    "train.fillna(0, inplace=True)\n",
-    "test.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# example with all params defined\n",
-    "new_train, new_target = GANGenerator(\n",
+    "fake_train, fake_target = GANGenerator(\n",
     "    gen_x_times=100,\n",
     "    cat_cols=[\"Pclass\", \"Sex\", \"SibSp\", \"Parch\", \"Embarked\"],\n",
     "    bot_filter_quantile=0.001,\n",
@@ -231,32 +224,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "new_train1, new_target1 = OriginalGenerator(gen_x_times=1.5).generate_data_pipe(\n",
-    "    train,\n",
-    "    target,\n",
-    "    test,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "new_train1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -273,20 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "real_df = pd.DataFrame(real_features, columns = NUM_COLUMNS)\n",
-    "fake_df = pd.DataFrame(fake_features, columns = NUM_COLUMNS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Normalize the data\n",
-    "fake_data = (fake_data - np.mean(data, axis=0)) / np.std(fake_data, axis=0)"
+    "real = train.copy()\n",
+    "fake = fake_train.copy()"
    ]
   },
   {
@@ -300,10 +255,33 @@
     "\n",
     "feature = \"Age\"\n",
     "\n",
-    "sns.histplot(data[feature], label='Real Data', alpha=0.5, ax=ax1)\n",
-    "sns.histplot(0.7*data[feature] + 10, label='Fake Data', alpha=0.5, ax=ax1)\n",
-    "plt.legend(loc='upper left')\n",
+    "sns.histplot(real[feature], label=\"Real Data\", alpha=0.5, ax=ax1, stat=\"density\")\n",
+    "sns.histplot(fake[feature] + 10, label=\"Fake Data\", alpha=0.5, ax=ax1, stat=\"density\")\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fake[LABEL] = fake_target\n",
+    "fake = fake[[LABEL] + COLUMNS]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fake.to_csv(\"data/fake/tabgan_data.csv\")"
    ]
   },
   {
